nav bar z-index fixed !

--- a/src/static/public/css/ui/nav.css
+++ b/src/static/public/css/ui/nav.css
@@ -2,7 +2,7 @@
 	--nav-size: 50px;
 	box-sizing: border-box;
 	position: relative;
-	z-index: 5;
+	z-index: 99;
 	text-align: center;
 	display: flex;
 	flex-wrap: nowrap;
